syntax = "proto3";
package user;

option go_package="user";

// uncomment for inline HTTP desc google.api.http
import "google/api/annotations.proto";

service User {
  // Получить пользователей по идентификаторам
  rpc GetUsersByIDs(GetUsersByIDsRequest) returns (GetUsersByIDsResponse) {
    option (google.api.http) = {
      post: "/user/get-users-by-ids"
      body: "*"
    };
  }
}

// GetUsersByIDsRequest
message GetUsersByIDsRequest {
  repeated int64 user_ids = 1;
}

// GetUsersByIDsResponse
message GetUsersByIDsResponse {
  message User {
    int64 id = 1;
    string name = 2;
  }
  repeated User users = 1;
}